--- a/ProjectManagement/Views/Shared/_AdminLoginPartial.cshtml
+++ b/ProjectManagement/Views/Shared/_AdminLoginPartial.cshtml
@@ -17,7 +17,7 @@
                         <i class="fal fa-user"></i>
                         Profile
                     </a>
-                    <a class="dropdown-item" href="#">
+                    <a class="dropdown-item" href="/Account/ChangePassword">
                         <i class="fal fa-lock"></i>
                         Change Password
                     </a>
