--- a/ProjectManagement/Views/Projects/Report.cshtml
+++ b/ProjectManagement/Views/Projects/Report.cshtml
@@ -14,14 +14,45 @@
                 <option value="" disabled selected>Choose Project Name</option>
             </select>
         </div>
+
+        <ul id="listItem" class="list-group list-group-flush"></ul>
     </div>
 </div>
 
 
 @section Scripts{
     <script>
-        $(function () {
+        $(function() {
             $('.mdb-select').materialSelect();
+        });
+
+        const selectProject = document.getElementById("selectProjectName");
+        const listItem = document.getElementById("listItem");
+
+        selectProject.addEventListener("change", function() {
+            listItem.innerHTML = "";
+
+            $.ajax({
+                url: "/Projects/GetReport",
+                data: { id: this.value },
+                success: response => {
+                    if (!response.IsSuccess) return;
+                    const fragment = document.createDocumentFragment();
+
+                    response.Data.forEach(item => {
+                        const li = document.createElement("li");
+                        li.className = "list-group-item d-flex justify-content-between align-items-center";
+                        li.innerHTML = `<strong>${item.ReportName}</strong>
+                                        <a target="_blank" href="/FILES/projectReports/${item.FileName}">download</a>`;
+                        fragment.appendChild(li);
+                    });
+
+                    listItem.append(fragment);
+                },
+                error: err => {
+                    console.log(err);
+                }
+            });
         });
     </script>
 }
