--- a/ProjectManagement/Views/Projects/Report.cshtml
+++ b/ProjectManagement/Views/Projects/Report.cshtml
@@ -4,7 +4,7 @@
     Layout = "_AdminLayout";
 }
 
-<div class="m-md-3">
+<div class="container">
     <h4 class="page-header mt-3">Project Report</h4>
     <p class="mb-3">@ViewBag.ProjectSector.Sector</p>
 
