add download tag

--- a/ProjectManagement/Views/Projects/Report.cshtml
+++ b/ProjectManagement/Views/Projects/Report.cshtml
@@ -46,7 +46,7 @@
                                             <strong>${item.ReportName}</strong>
                                             <i class="d-block text-muted">${item.FileTitle}</i>
                                          </div>
-                                            <a target="_blank" href="/FILES/projectReports/${item.FileName}">download</a>`;
+                                            <a href="/FILES/projectReports/${item.FileName}" download>download</a>`;
                         fragment.appendChild(li);
                     });
 
